--- a/StockMarketApi/StockMarketApi.csproj
+++ b/StockMarketApi/StockMarketApi.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\APIHelperLibrary\APIHelperLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
