Removed past librarys, found posible better web resources.

--- a/StockMarketApi/StockMarketApi.csproj
+++ b/StockMarketApi/StockMarketApi.csproj
@@ -7,7 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\APIHelperLibrary\APIHelperLibrary.csproj" />
+    <Compile Update="StockResource.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>StockResource.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="StockResource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>StockResource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
