--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /APIHelperLibrary/ApiResource.resx
+/StockMarketApi/StockResource.resx
