--- a/APIHelperLibrary/APIHelperLibrary.csproj
+++ b/APIHelperLibrary/APIHelperLibrary.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\APIModels\APIModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="ApiResource.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
